# MNA_MLOps

./: .dvcignore  .gitignore  Makefile  README.md  README_FASE3.md  fixed_plot_climate_correlations.py  fixed_plot_distributions.py  pyproject.toml  requirements.txt  requirements_f3.txt  setup_env.sh
.github/: deploy_app.yml
.github/workflows/: deploy_app.yml  deploy_frontend.yml
Project/: CargaArchivos.py  CargaDatos.py  EvalModelo.py  Modelo.py  Preprocesamiento.py  Test.ipynb  best_model_pipeline.joblib  monitor_data_drift_evidently.py  run_full_pipeline.py  validate_environment.py
app/: Dockerfile  Dockerfile_f3  Modelo.py  api.py  api_f3.py  requirements.txt
app_fastapi/: Modelo.py  best_model_pipeline.joblib
config/: config.yaml
data/: .gitignore  power_tetouan_city_original.csv.dvc
data/processed/: .gitignore  power_tetouan_city_modified.csv.dvc  power_tetouan_city_processed.csv.dvc
data/raw/: .gitignore  power_tetouan_city.csv.dvc  power_tetouan_city_modified.csv.dvc
docs/: Data_Versioning.md  Entrega_Final_Equipo43.typ  Evidently_Monitoring_Guide.md  FASE_3_EJECUTAR.md  ML_Canvas.md  Testing_Guide.md  mkdocs.yml
docs/docs/: index.md
frontend/: Prediction.js
frontend/prediction-frontend/: index.html  package-lock.json  package.json
mlruns/: new_mlflow.db
mlruns/0/: meta.yaml
mlruns/781331707748066146/: meta.yaml
notebooks/: Fase 1_Equipo43.ipynb  Fase 1_Equipo43_EDA.ipynb  Fase 1_Equipo43_models.ipynb  Fase 2_Refactorizacion.ipynb  Fase 3_Data_Drifting.ipynb  Fase_3_Implementacion_f3.ipynb  Test.ipynb
outputs/: actual_metrics.json  actual_params.json
references/: Fase 1_Equipo43.ipynb
reports/: mlops_pipeline_summary.json
reports/evidently/: data_drift_report.json  performance_comparison.json
reproducibility/: Dockerfile  Makefile  README.md  requirements.txt
reproducibility/.dvc/: .gitignore  config
reproducibility/Project/: CargaDatos.py  Modelo.py  compare_models.py  extract_reference_from_mflow.py  generate_metrics.py  monitor_data_drift_evidently.py  run_full_pipeline.py  run_mlops_complete.py
scripts/: drift_simulation_f3.py  reproducibilidad_f3.py  run_full_pipeline.py  run_mlops_complete.py  validate_environment.py
src/: __init__.py
src/data/: __init__.py
src/features/: __init__.py
src/models/: __init__.py
src/utils/: __init__.py
src/visualization/: __init__.py
tests/: test_pipeline.py  test_pipeline_f3.py
(+76 files in other folders)
