[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Project"
version = "0.0.1"
description = "Proyecto MLOps Equipo 43: Predicci\u00f3n del Consumo de Energ\u00eda en la Ciudad de Tetu\u00e1n, Marruecos."
authors = [
  { name = "Equipo 43" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.13.7"


[tool.ruff]
line-length = 99
src = ["Project"]
include = ["pyproject.toml", "Project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Project"]
force-sort-within-sections = true

