[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prediccion-energia-tetouan"
version = "1.0.0"
description = "MLOps pipeline para predicción de consumo energético en Tetuán - Equipo 43"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Equipo 43", email = "equipo43@mna.com"}
]
keywords = ["mlops", "machine learning", "energy prediction", "time series"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.5.0",
    "dvc>=3.0.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "pyyaml>=6.0",
    "jupyter>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0"
]

[project.urls]
Homepage = "https://github.com/equipo43/prediccion-energia-tetouan"
Repository = "https://github.com/equipo43/prediccion-energia-tetouan"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"